--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background: #f4f4f4;
+            background: url(bg.jpg);
             color: #333;
             transition: background 0.3s, color 0.3s;
         }
@@ -35,7 +35,7 @@
             max-width: 1200px;
             margin: 20px auto;
             padding: 20px;
-            background: #fff;
+            background: #ffffff80;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             border-radius: 12px;
             transition: background 0.3s, box-shadow 0.3s;
@@ -43,7 +43,7 @@
         .sidebar {
             flex: 1;
             padding: 20px;
-            background: #f9f9f9;
+            background: #f9f9f980;
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: background 0.3s;
@@ -70,7 +70,7 @@
             margin-bottom: 20px;
             padding: 15px;
             border-radius: 12px;
-            background: #fff;
+            background: #ffffff80;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
             transition: background 0.3s, box-shadow 0.3s;
             transition: .3s;
@@ -88,8 +88,8 @@
         }
         .theme-toggle {
             position: absolute;
-            top: 20px;
-            right: 20px;
+            top: 30px;
+            right: 80px;
             padding: 10px 20px;
             background: #007bff;
             color: white;
@@ -102,15 +102,14 @@
             background: #0056b3;
         }
         body.dark-theme {
-            background: #222;
             color: #f4f4f4;
         }
         body.dark-theme .container {
-            background: #333;
+            background: #33333380;
             box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
         }
         body.dark-theme .sidebar {
-            background: #444;
+            background: #4448;
         }
         body.dark-theme .sidebar h2 {
             color: #f4f4f4;
@@ -119,15 +118,14 @@
             color: #6caaff;
         }
         body.dark-theme .post {
-            background: #555;
             box-shadow: 0 4px 8px rgba(255, 255, 255, 0.05);
         }
         body.dark-theme .post h2 {
             color: #f4f4f4;
         }
-        body.dark-theme .footer {
-            background: #111;
-        }
+	body.dark-theme .post{
+	    background: #33333380;
+	}
         .table-of-contents {
             margin-top: 20px;
         }
@@ -159,7 +157,7 @@
     </style>
 </head>
 <body>
-    <button class="theme-toggle" onclick="toggleTheme()">theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()">Theme Toggle</button>
     <div class="container">
         <div class="sidebar">
             <h2>Bow</h2>
